Update Index <title>

--- a/index.htm
+++ b/index.htm
@@ -1,7 +1,7 @@
 <html>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
   <script src="hidebib.js" type="text/javascript"></script>
-  <title>Ruimin Ke - University of Washington</title>
+  <title>Ruimin Ke - Homepage</title>
   <link href="https://fonts.googleapis.com/css?family=Titillium+Web:400,600,400italic,600italic,300,300italic" type="text/css" rel="stylesheet" />
   <link href="style.css" type="text/css" rel="stylesheet" />
   <body>
