--- a/index.htm
+++ b/index.htm
@@ -32,7 +32,8 @@
           <heading>News</heading>
           <br />
           <ul>
-          <li><b>2022/01</b>: I am honored to receive the COTA Best Disertation Award 2020-2021.  
+          <li><b>2022/02</b>: My Ph.D. student, Talha Azfar, received the Texas Instrument Foundation (TIF) endowed scholarship for Spring 2022. Congrats Talha!
+          <li><b>2022/01</b>: I am honored to receive the COTA Best Disertation Award 2020-2021 for my PhD dissertation completed in 2020.  
           <li><b>2022/01</b>: I will attend TRB2022 in Washington DC. Looking forward to catching up with my friends and colleagues in person.
           <li><b>2022/01</b>: <a target="_blank" rel="noopener noreferrer" href="https://www.sciencedirect.com/science/article/pii/S0968090X21005088">Paper</a> on traffic congestion inference is published at Transportation Research Part C: Emerging Technologies.
           <li><b>2021/12</b>: Two invited talks at CICTP2021 and INFORMS2021 on multi-source data collection.
