--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,7 @@
           <heading>News</heading>
           <br />
           <ul>
+          <li><b>2022/03</b>: Invited talk at Hong Kong University of Science and Technology (HKUST).
           <li><b>2022/02</b>: My Ph.D. student, Talha Azfar, received the Texas Instrument Foundation (TIF) endowed scholarship for Spring 2022. Congrats Talha!
           <li><b>2022/01</b>: I am honored to receive the COTA Best Disertation Award 2020-2021 for my PhD dissertation completed in 2020.  
           <li><b>2022/01</b>: I will attend TRB2022 in Washington DC. Looking forward to catching up with my friends and colleagues in person.
