--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,9 @@
           <heading>News</heading>
           <br />
           <ul>
+          <li><b>2022/07</b>: I will join the ASCE T&DI AI in Transportation Committee as a member.
+          <li><b>2022/06</b>: Our <a target="_blank" rel="noopener noreferrer" href="https://rosap.ntl.bts.gov/view/dot/62636">report</a> on the FTA Pierce Transit safety polit project was published.
+          <li><b>2022/05</b>: I am glad to be selected as a ASCE ExCEEd fellow and will attend the <a target="_blank" rel="noopener noreferrer" href="https://www.asce.org/career-growth/educators/exceed-teaching-workshop">prestigious teaching workshop</a>. 
           <li><b>2022/04</b>: I am very honored and humbled to be selected among the <a target="_blank" rel="noopener noreferrer" href="https://xueshu.baidu.com/usercenter/index/aischolar2022">Global Top 150 Young Chinese Scholars in Artificial Intelligence</a> (AI+X group) by Baidu. 
           <li><b>2022/04</b>: <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9759230">Paper</a> on UAV-based perception is published at IEEE Transactions on ITS.
           <li><b>2022/03</b>: Invited talk at Hong Kong University of Science and Technology, Texas A&M University, and University of Cincinnati.
@@ -170,7 +173,7 @@
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Mr. Talha Azfar, doctoral research assistant</br>Mr. Swapnil Samant, doctoral research assistant</br>Ms. Cynthia Oaxaca, master's research assistant
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha A., PhD research associate</br>Swapnil S., PhD research associate</br>Chengyue W., master research assistant
           </tr>
           <tr>
             <td width="100%" valign="top"><strong>Prospective Students</strong><br /> I am actively looking for strong and motivated students to join our group! If you are interested in working with me, please email me with you CV, transcript, and GRE score. You can also directly apply through the <a target="_blank" rel="noopener noreferrer" href="https://www.utep.edu/engineering/civil/academic-programs/doctoral-program.html">UTEP Civil Engineering PhD program</a> and mention me in your application. I will try my best to respond to every applicant's email.</br> <u><b>UTEP students:</u></b> (1) If you are already a graduate student at UTEP Civil Engineering or Electrical & Computer Engineering, feel free to reach out. (2) I am also accepting undergraduate students in Civil Engineering for individual studies and undergraduate research.
