--- a/index.htm
+++ b/index.htm
@@ -34,7 +34,7 @@
           <ul>
           <li><b>2022/07</b>: I will join the ASCE T&DI AI in Transportation Committee as a member.
           <li><b>2022/06</b>: Our <a target="_blank" rel="noopener noreferrer" href="https://rosap.ntl.bts.gov/view/dot/62636">report</a> on the FTA Pierce Transit safety polit project was published.
-          <li><b>2022/05</b>: I am glad to be selected as a ASCE ExCEEd fellow and will attend the <a target="_blank" rel="noopener noreferrer" href="https://www.asce.org/career-growth/educators/exceed-teaching-workshop">prestigious teaching workshop</a>. 
+          <li><b>2022/05</b>: I am glad to be selected for the <a target="_blank" rel="noopener noreferrer" href="https://www.asce.org/career-growth/educators/exceed-teaching-workshop">ASCE ExCEEd teaching workshop</a>. 
           <li><b>2022/04</b>: I am very honored and humbled to be selected among the <a target="_blank" rel="noopener noreferrer" href="https://xueshu.baidu.com/usercenter/index/aischolar2022">Global Top 150 Young Chinese Scholars in Artificial Intelligence</a> (AI+X group) by Baidu. 
           <li><b>2022/04</b>: <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9759230">Paper</a> on UAV-based perception is published at IEEE Transactions on ITS.
           <li><b>2022/03</b>: Invited talk at Hong Kong University of Science and Technology, Texas A&M University, and University of Cincinnati.
