--- a/index.htm
+++ b/index.htm
@@ -179,7 +179,7 @@
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha A., PhD research associate</br>Swapnil S., PhD research associate</br>Abiral A., PhD research associate</br>Chengyue W., master research assistant</br>Roger Valenzuela, undergraduate research assistant
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha A., PhD research associate</br>Swapnil S., PhD research associate</br>Abiral A., PhD research associate</br>Chengyue W., master research assistant</br>Roger V., undergraduate research assistant
           </tr>
           <tr>
             <td width="100%" valign="top"><strong>Prospective Students</strong><br /> I am actively looking for strong and motivated students to join our group! If you are interested in working with me, please email me with you CV, transcript, and GRE score. You can also directly apply through the <a target="_blank" rel="noopener noreferrer" href="https://www.utep.edu/engineering/civil/academic-programs/doctoral-program.html">UTEP Civil Engineering PhD program</a> and mention me in your application. I will try my best to respond to every applicant's email.</br> <u><b>UTEP students:</u></b> (1) If you are already a graduate student at UTEP Civil Engineering or Electrical & Computer Engineering, feel free to reach out. (2) I am also accepting undergraduate students in Civil Engineering for individual studies and undergraduate research.
