--- a/index.htm
+++ b/index.htm
@@ -32,6 +32,12 @@
           <heading>News</heading>
           <br />
           <ul>
+          <li><b>2023/01</b>: We received the TRB AED30 Best Paper Award for the paper "Cooperative and Comprehensive Multi-task Surveillance Sensing and Interaction System Empowered by Edge Artificial Intelligence".
+          <li><b>2022/12</b>: Paper accepted by Transportation Research Part C: Emerging Technologies.
+          <li><b>2022/12</b>: Talha passed his PhD Qualifier Exam. 
+          <li><b>2022/11</b>: Talha made a <a target="_blank" rel="noopener noreferrer" href="https://nyu.zoom.us/rec/play/0m3GOt7iWt-vNhStCJ-J1naYCwnGTi29B5cjJQCjmVbZeunkgxw4Bzfw_MqqwFwJR85CLu8r_Fhweh66.6rAC7u7TAZkBQsOC?continueMode=true&_x_zm_rtaid=ipupiJfQSz6GrYaOgJojxQ.1672900135494.974de250732fb4ac7be6138efebbbbf9&_x_zm_rhtaid=842">webinar tutorial presentation</a> on creating a campus digital twin model (<a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9913679">paper</a>) at the C2Smart center Student Learning Hub.
+          <li><b>2022/11</b>: <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9908171">Paper</a> received the Outstanding Paper Award at the 2nd IEEE Digital Twins and Parallel Intelligence (DTPI) conference.
+          <li><b>2022/11</b>: Abiral and Chengyue made two oral presentations at the Transportation Research Forum at UTEP.
           <li><b>2022/10</b>: 4 papers are accepted by Transportation Research Board 2023 for presentation.
           <li><b>2022/09</b>: 3 papers are accepted by IEEE Digital Twin and Parallel Intelligence 2022.
           <li><b>2022/09</b>: <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/9889237">Paper</a> on dynamic reversible lane management strategy is published at IEEE Transactions on ITS.
@@ -155,7 +161,7 @@
               <td width="100%" valign="top"><strong>CE5390: Special Topics in Civil Engineering - Intelligent Transportation Systems</strong><br />As Instructor / University of Texas at El Paso</a><br/>Fall 2022 </td>
             </tr>
             <tr>
-              <td width="100%" valign="top"><strong>CE4340: Transportation Engineering</strong><br />As Instructor / University of Texas at El Paso</a><br/>Spring 2022 </td>
+              <td width="100%" valign="top"><strong>CE4340: Transportation Engineering</strong><br />As Instructor / University of Texas at El Paso</a><br/>Spring 2023, Spring 2022 </td>
             </tr>
             <tr>
            <!--   <td width="20%" valign="top">
@@ -179,7 +185,7 @@
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha A., PhD research associate</br>Swapnil S., PhD research associate</br>Abiral A., PhD research associate</br>Chengyue W., master research assistant</br>Roger V., undergraduate research assistant
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD research associate</br>Abiral Aashish, PhD research associate</br>Chengyue Wang, master research assistant</br>Roger Valenzuela, undergraduate research assistant
           </tr>
           <tr>
             <td width="100%" valign="top"><strong>Prospective Students</strong><br /> I am actively looking for strong and motivated students to join our group! If you are interested in working with me, please email me with you CV, transcript, and GRE score. You can also directly apply through the <a target="_blank" rel="noopener noreferrer" href="https://www.utep.edu/engineering/civil/academic-programs/doctoral-program.html">UTEP Civil Engineering PhD program</a> and mention me in your application. I will try my best to respond to every applicant's email.</br> <u><b>UTEP students:</u></b> (1) If you are already a graduate student at UTEP Civil Engineering or Electrical & Computer Engineering, feel free to reach out. (2) I am also accepting undergraduate students in Civil Engineering for individual studies and undergraduate research.
