--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
           <br />
           <ul>
           <li><b>2023/08</b>: A proposal I led as the PI on Machine Learning in Transportation Education is recommended for award by the National Science Foundation.
-          <li><b>2023/08</b>: Our very own Talha Azfar did a great job in unveiling the outcomes of the USDOT C2SMARTER project on transportation digital twin. <a target="_blank" rel="noopener noreferrer" href="https://youtu.be/tYYnSCZ3UEE">Webinar YouTube Link</a>.
+          <li><b>2023/08</b>: Talha did a great job in unveiling the outcomes of the USDOT C2SMARTER project on transportation digital twin. <a target="_blank" rel="noopener noreferrer" href="https://youtu.be/tYYnSCZ3UEE">Webinar YouTube Link</a>.
           <li><b>2023/07</b>: I am happy to announce that I will join Rensselaer Polytechnic Institute as an Assistant Professor starting from August 2023.
           <li><b>2023/06</b>: I was appointed as the Chair for the Edge Computing Subcommittee of TRB Standing Committee on AI and Advanced Computing Application.
           <li><b>2023/04</b>: The first edition of my co-authored book <a target="_blank" rel="noopener noreferrer" href="https://shop.elsevier.com/books/title/author/9780323961264?utm_source=google_ads&utm_medium=paid_search&utm_campaign=usdsa&gclid=Cj0KCQjw0IGnBhDUARIsAMwFDLky4jBbc_l6eus937eQsNHpFeOmkGIKtBMQVFHI4ewZw82mEf7poVcaAh_wEALw_wcB&gclsrc=aw.ds">Machine Learning for Transportation Research and Applications</a> is published at Elsevier.
@@ -196,14 +196,14 @@
         </table>
         <br />
         <br />
-        <br />
-        <br />
       </td>
     </tr>
-  </table>
-    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-41929264-1', 'berkeley.edu'); ga('send', 'pageview');</script>
+    <tr>
     <div style="width: 50%; overflow: hidden;">
       <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=-snL6t0--XBcjImdquFwu0d0r_-yyNO8KEP61pGUrZs&cl=ffffff&w=a"></script>
     </div>
+    </tr>
+  </table>
+    <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-41929264-1', 'berkeley.edu'); ga('send', 'pageview');</script>
   </body>
 </html>
