--- a/index.htm
+++ b/index.htm
@@ -198,12 +198,12 @@
         <br />
       </td>
     </tr>
-    <tr>
-    <div style="width: 50%; overflow: hidden;">
-      <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=-snL6t0--XBcjImdquFwu0d0r_-yyNO8KEP61pGUrZs&cl=ffffff&w=a"></script>
-    </div>
-    </tr>
   </table>
     <script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga'); ga('create', 'UA-41929264-1', 'berkeley.edu'); ga('send', 'pageview');</script>
+  <div style="display: flex; align-items: center; justify-content: center; height: 100%; width: 100%;">
+      <div style="width: 50%; overflow: hidden;">
+          <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=-snL6t0--XBcjImdquFwu0d0r_-yyNO8KEP61pGUrZs&cl=ffffff&w=a"></script>
+      </div>
+  </div>
   </body>
 </html>
