--- a/index.htm
+++ b/index.htm
@@ -191,6 +191,9 @@
             <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD student - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a>
           </tr>
           <tr>
+            <td width="100%" valign="top"><strong>Alumni</strong><br /> Chengyue Wang, MS Student 2022-2023 at UTEP / Current Position: PhD Candidate at University of Macau
+          </tr>
+          <tr>
             <td width="100%" valign="top"><strong>Prospective Students</strong><br /> I am currently looking for 1-2 motivated PhD students to join our group! If you are interested in working with me at RPI, please email me with you CV, transcripts, GRE score, and any other expectations. You can also directly apply through the <a target="_blank" rel="noopener noreferrer" href="https://cee.rpi.edu/graduate">RPI CEE programs</a> and mention me in your application. I will try my best to respond to every applicant's email.</br> <u><b>RPI students:</u></b> (1) If you are already a graduate student at RPI, feel free to reach out. (2) I am also accepting undergraduate students for individual studies.
           </tr>
         </table>
