--- a/index.htm
+++ b/index.htm
@@ -41,7 +41,7 @@
           <br />
           <ul>
           <li><b>2024/06</b>: Welcome Shuyang Li (University of Michigan-Ann Arbor) and Jiachen Ye (Tsinghua University) to join our group officially as research interns.
-          <li><b>2024/06</b>: Our group, in collaboration with Google Inc, AIWaysion Inc, UW, and FSU, developed the first comprehensive review paper on Quantum Computing in Intelligent Transportation Systems. 
+          <li><b>2024/06</b>: Our group, in collaboration with Google Inc, AIWaysion Inc, UW, and FSU, developed a comprehensive <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2406.00862">review paper on quantum computing in ITS</a>. 
           <li><b>2024/05</b>: The TRB Edge Computing Subcommittee organized a session at the AI in Motion Symposium, focusing on roadway infrastructure computing and vehicle computing, with four speakers Dr. Chris Claudel, Dr. Chenxi Liu, Dr. Adian Cook, and Dr. Sidi Lu.
           <li><b>2024/04</b>: We hosted Dr. Yinhai Wang (University of Washington), Dr. Kris Henrickson (Uber), Dr. Ken Yang (AECOM), and Dr. Yiheng Feng (Purdue University).
           <li><b>2024/02</b>: US Patent <a target="_blank" rel="noopener noreferrer" href="https://patents.google.com/patent/US20240037899A1/en">Determining a visibility measure based on an image of an environment</a> is published.
