--- a/index.htm
+++ b/index.htm
@@ -230,10 +230,10 @@ reality (VR) applications for visualization in VR headsets. Multiple scenarios w
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Shuyang Li, Graduate Research Assistant <br /> Jiachen Ye, Undergraduate Research Assistant
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Kaicong Huang, PhD student (M.S. in Robotics from National Singapore University) <br /> Jiachen Ye, Undergraduate Research Assistant (Tsinghua University)
           </tr>
           <tr>
-            <td width="100%" valign="top"><strong>Alumni</strong><br /> Chengyue Wang, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Macau
+            <td width="100%" valign="top"><strong>Alumni</strong><br /> Shuyang Li, Research Intern 2024 at RPI / Current Position: MS Student at University of Michigan <br /> Chengyue Wang, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Macau
             <br /> Abiral Aashish, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Florida
             <br /> Swapnil Samant, PhD RA 2022-2023 at UTEP / Current Position: Associate Research Scientist at Texas A&M Transportation Institute
             <br /> Leslie Nunez, Undergraduate RA 2023 at UTEP / Current Position: Civil Engineering Designer at FXSA
