--- a/index.htm
+++ b/index.htm
@@ -230,7 +230,7 @@ reality (VR) applications for visualization in VR headsets. Multiple scenarios w
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Kaicong Huang, PhD student (M.S. in Robotics from National Singapore University) <br /> Jiachen Ye, Undergraduate Research Assistant (Tsinghua University)
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Kaicong Huang, PhD student (M.S. in Robotics from National University of Singapore) <br /> Jiachen Ye, Undergraduate Research Assistant (Tsinghua University)
           </tr>
           <tr>
             <td width="100%" valign="top"><strong>Alumni</strong><br /> Shuyang Li, Research Intern 2024 at RPI / Current Position: MS Student at University of Michigan <br /> Chengyue Wang, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Macau
