--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         <td>
           <table cellpadding="10" width="100%" align="center" border="0">
             <tr>
-              <td width="50%" valign="top">I am a tenure-track Assistant Professor at <a target="_blank" rel="noopener noreferrer" href="https://www.rpi.edu/">Rensselaer Polytechnic Institute</a> with the <a target="_blank" rel="noopener noreferrer" href="https://cee.rpi.edu/">Department of Civil and Environmental Engineering</a>.
+              <td width="50%" valign="top">I am a tenure-track Assistant Professor of Transportation Engineering at <a target="_blank" rel="noopener noreferrer" href="https://www.rpi.edu/">Rensselaer Polytechnic Institute</a> with the <a target="_blank" rel="noopener noreferrer" href="https://cee.rpi.edu/">Department of Civil and Environmental Engineering</a>.
                 Our research group at RPI seeks talented and dedicated students to join our team. Additionally, we are open to collaborating with individuals and groups from both academia and industry who share our research interests.</br></br>
                 I received my Ph.D. and M.S. degrees in Transportation Engineering at the <a target="_blank" rel="noopener noreferrer" href="https://www.washington.edu/">University of Washington</a>. I earned a M.S. degree in Computer Science from the <a target="_blank" rel="noopener noreferrer" href="https://illinois.edu/">University of Illinois at Urbana-Champaign</a>, and a B.E. degreee in Automation from <a target="_blank" rel="noopener noreferrer" href="https://www.tsinghua.edu.cn/en/">Tsinghua University</a>.
                 Our research interest lies in Intelligent Transportation Systems with focuses on Machine Learning and Edge/Cloud/Quantum Computing algorithms and models towards a safe, equitable, and resilient transportation infrastructure system. 
@@ -40,7 +40,13 @@
           <heading>News</heading>
           <br />
           <ul>
-          <li><b>2024/06</b>: Our group presented two posters at the <a target="_blank" rel="noopener noreferrer" href="https://www.asce-ictd.org/">ASCE ICTD Conference</a> in Atlanta.
+          <li><b>2024/11</b>: The <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/document/10770822">ChatSUMO paper</a> is published at IEEE Transactions on Intelligent Vehicles. Congrats to Shuyang and Talha!
+          <li><b>2024/11</b>: New project from IBM.
+          <li><b>2024/10</b>: Our group has four papers accepted at TRB 2024 for presentation. 
+          <li><b>2024/10</b>: We hosted Dr. Yao-Jan Wu, the Executive Director of Arizona Transportation Institute (AZTI).
+          <li><b>2024/10</b>: Invited guest lecture on transportation edge computing.
+          <li><b>2024/09</b>: New projects from USDOT SEMPACT.
+          <li><b>2024/08</b>: Welcome Kaicong Huang (National University of Singapore) to join our group as a PhD research assistant.
           <li><b>2024/06</b>: Welcome Shuyang Li (University of Michigan-Ann Arbor) and Jiachen Ye (Tsinghua University) to join our group officially as research interns.
           <li><b>2024/06</b>: Our group, in collaboration with Google Inc, AIWaysion Inc, UW, and FSU, developed a comprehensive <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2406.00862">review paper on quantum computing in ITS</a>. 
           <li><b>2024/05</b>: The TRB Edge Computing Subcommittee organized a session at the AI in Motion Symposium, focusing on roadway infrastructure computing and vehicle computing, with four speakers Dr. Chris Claudel, Dr. Chenxi Liu, Dr. Adian Cook, and Dr. Sidi Lu.
@@ -63,6 +69,14 @@
           <br />
           <br />
           <table cellpadding="10" width="100%" align="center" border="0">
+          <tr>
+              <td width="20%" valign="top">
+                <img src="icons/chatsumo2024.png" style="border-style: none" width="100%" />
+              </td>
+              <td width="80%" valign="top"><papertitle><a href="./pdfs/chatsumo2024.pdf">ChatSUMO: Large Language Model for Automating Traffic Scenario Generation in Simulation of Urban MObility</a></papertitle><br />Shuyang Li, Talha Azfar, <strong><b>Ruimin Ke</b></strong><br />IEEE Transactions on Intelligent Vehicles, 2024<br /><div class="paper" id="chatsumo2024"><a href="javascript:toggleblock('chatsumo2024_abs')">abstract</a> / <a href="javascript:toggleblock('chatsumo2024_bib')">bibtex</a> / <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/document/10770822">link</a>
+                <p align="justify"><i id="chatsumo2024_abs">Large Language Models (LLMs), capable of handling multi-modal input and outputs such as text, voice, images, and video, are transforming the way we process information. Beyond just generating textual responses to prompts, they can integrate with different software platforms to offer comprehensive solutions across diverse applications. In this paper, we present ChatSUMO, an LLM-based agent that integrates language processing skills to generate abstract and real-world simulation scenarios in the widely-used traffic simulator - Simulation of Urban MObility (SUMO). Our methodology begins by leveraging the LLM for user input, which adapts it to relevant keywords needed to run python scripts. These scripts are designed to convert specified regions into coordinates, fetch data from OpenStreetMap, transform it into a road network, and subsequently run SUMO simulations with the designated traffic conditions. The outputs of the simulations are then interpreted by the LLM resulting in informative comparisons and summaries. Users can continue the interaction and generate a variety of customized scenarios without prior traffic simulation expertise. Any city available from OpenStreetMap can be imported, and for demonstration, we created a real-world simulation for the city of Albany. ChatSUMO also allows simulation customization capabilities of edge edit, traffic light optimization, and vehicle edit by users through the web interface.</i></p>
+                <bibtext xml:space="preserve" id="chatsumo2024_bib">@article{li2024chatsumo, <br />title={ChatSUMO: Large Language Model for Automating Traffic Scenario Generation in Simulation of Urban MObility},<br />author={Li, Shuyang and Azfar, Talha and Ke, Ruimin},<br />journal={IEEE Transactions on Intelligent Vehicles}, <br/>pages={1-12}, <br />year={2024},<br />publisher={IEEE}<br />}<br /></bibtext></div><script language="JavaScript">hideblock('chatsumo2024_bib');hideblock('chatsumo2024_abs');</script></td>
+            </tr>
           <tr>
               <td width="20%" valign="top">
                 <img src="icons/dct2024.png" style="border-style: none" width="100%" />
