--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,9 @@
           <heading>News</heading>
           <br />
           <ul>
+          <li><b>2025/02</b>: Invited Talk at the <a target="_blank" rel="noopener noreferrer" href="https://acecny.org/events/EventDetails.aspx?id=1894826">2025 ACEC NY Winter Conference</a> in Albany.
+          <li><b>2025/01</b>: Invited Talk at the AI+Quantum Technology workshop at TRB 2025.
+          <li><b>2025/01</b>: I co-chair the 27th COTA Winter Symposium with Dr. XB Hu at TRB 2025.
           <li><b>2024/11</b>: The <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/document/10770822">ChatSUMO paper</a> is published at IEEE Transactions on Intelligent Vehicles. Congrats to Shuyang and Talha!
           <li><b>2024/11</b>: New project from IBM.
           <li><b>2024/10</b>: Our group has four papers accepted at TRB 2024 for presentation. 
@@ -48,7 +51,7 @@
           <li><b>2024/09</b>: New projects from USDOT SEMPACT.
           <li><b>2024/08</b>: Welcome Kaicong Huang (National University of Singapore) to join our group as a PhD research assistant.
           <li><b>2024/06</b>: Welcome Shuyang Li (University of Michigan-Ann Arbor) and Jiachen Ye (Tsinghua University) to join our group officially as research interns.
-          <li><b>2024/06</b>: Our group, in collaboration with Google Inc, AIWaysion Inc, UW, and FSU, developed a comprehensive <a target="_blank" rel="noopener noreferrer" href="https://arxiv.org/abs/2406.00862">review paper on quantum computing in ITS</a>. 
+          <li><b>2024/06</b>: Our group, in collaboration with Google Inc, AIWaysion Inc, UW, and FSU, developed a comprehensive <a target="_blank" rel="noopener noreferrer" href="https://ieeexplore.ieee.org/abstract/document/10838498">review paper on quantum computing in ITS</a>. 
           <li><b>2024/05</b>: The TRB Edge Computing Subcommittee organized a session at the AI in Motion Symposium, focusing on roadway infrastructure computing and vehicle computing, with four speakers Dr. Chris Claudel, Dr. Chenxi Liu, Dr. Adian Cook, and Dr. Sidi Lu.
           <li><b>2024/04</b>: We hosted Dr. Yinhai Wang (University of Washington), Dr. Kris Henrickson (Uber), Dr. Ken Yang (AECOM), and Dr. Yiheng Feng (Purdue University).
           <li><b>2024/02</b>: US Patent <a target="_blank" rel="noopener noreferrer" href="https://patents.google.com/patent/US20240037899A1/en">Determining a visibility measure based on an image of an environment</a> is published.
@@ -210,7 +213,7 @@ reality (VR) applications for visualization in VR headsets. Multiple scenarios w
             <tr>
               <td width="100%" valign="top"><strong>CIVL6961: Machine Learning in Transportation</strong><br />As Instructor / Rensselaer Polytechnic Institute</a><br/>Fall 2024 </td>
             <tr>
-              <td width="100%" valign="top"><strong>CIVL2030: Intro to Transportation Engineering</strong><br />As Instructor / Rensselaer Polytechnic Institute</a><br/>Spring 2024 </td>
+              <td width="100%" valign="top"><strong>CIVL2030: Intro to Transportation Engineering</strong><br />As Instructor / Rensselaer Polytechnic Institute</a><br/>Spring 2024, Spring 2025 </td>
             </tr>
 
             <tr>
@@ -244,10 +247,10 @@ reality (VR) applications for visualization in VR headsets. Multiple scenarios w
         <heading>Research Group and Opportunities</heading>
         <table cellpadding="10" width="100%" align="left" border="0">
           <tr>
-            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Kaicong Huang, PhD student (M.S. in Robotics from National University of Singapore) <br /> Jiachen Ye, Undergraduate Research Assistant (Tsinghua University)
+            <td width="100%" valign="top"><strong>Current Group Members</strong><br /> Talha Azfar, PhD Candidate - <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/talha-azfar/">LinkedIn</a> / <a target="_blank" rel="noopener noreferrer" href="https://scholar.google.com/citations?user=upSJGWUAAAAJ&hl=en">Google Scholar</a> <br /> Kaicong Huang, PhD student (M.S. in Robotics from National University of Singapore) <br /> Weiheng Oh, Undergraduate Research Assistant at RPI
           </tr>
           <tr>
-            <td width="100%" valign="top"><strong>Alumni</strong><br /> Shuyang Li, Research Intern 2024 at RPI / Current Position: MS Student at University of Michigan <br /> Chengyue Wang, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Macau
+            <td width="100%" valign="top"><strong>Alumni</strong><br /> Shuyang Li, Research Intern 2024 at RPI <br /> Jiachen Ye, Research Intern 2024 at RPI <br /> Chengyue Wang, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Macau
             <br /> Abiral Aashish, MS RA 2022-2023 at UTEP / Current Position: PhD Student at University of Florida
             <br /> Swapnil Samant, PhD RA 2022-2023 at UTEP / Current Position: Associate Research Scientist at Texas A&M Transportation Institute
             <br /> Leslie Nunez, Undergraduate RA 2023 at UTEP / Current Position: Civil Engineering Designer at FXSA
